--- a/client/templates/header/header.styl
+++ b/client/templates/header/header.styl
@@ -9,7 +9,7 @@ header
 
   .home-page &
     background rgba(39, 43, 48, .1)
-    transition .5s all ease-in-out
+    transition .35s all ease-in-out
 	
   .header-wrap
     width 100%
@@ -83,7 +83,9 @@ header
             text-decoration none
 
           .fa
-            margin-right 6px
+            margin-right 2px
+            @media screen and (min-width: 768px)
+              margin-right 6px
 
 .home-page
   header.navbar-dark
