--- a/client/templates/index/index.styl
+++ b/client/templates/index/index.styl
@@ -169,7 +169,9 @@
   margin 0 5px
   text-align left
   position absolute
-  width: 96%
+  width 96%
+  box-shadow 0 4px 10px -1px rgba(0,0,0,.35)
+  z-index 9
 
 .city-item
   text-decoration none
